--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
   "name": "Tubeme",
   "version": "0.2",
   "description": "Grabs the current TFL/London tube data, customizable update time.",
+   "icons": { "128": "tflicon.png" },
   "browser_action": {
     "default_icon": "icon.png",
     "default_badge" : "1",
